# server-gateway

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.json  config.schema.json
.config/: nextest.toml
src/: main.rs
src/app/: mod.rs
src/config/: app.rs  endpoint.rs  upstream.rs
src/config/auth/: jwt.rs  mod.rs
tests/: single_server.rs
