[package]
name = "server-gateway"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials" }
gateway = { tag = "0.7.0", features = ["middlewares"], git = "https://github.com/majksa-dev/rust-gateway"}
derive_more = "0.99.18"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
envy = "0.4.2"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
regex = "1.10.5"
async-trait = "0.1.81"
structopt = "0.3.26"
redis = "0.26.0"
http = "1.1.0"
tokio = { version = "1.39.2", features = ["full"] }
bb8-redis = "0.15.0"
anyhow = "1.0.86"
url = "2.5.2"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.1"

